--- a/index.html
+++ b/index.html
@@ -16,27 +16,20 @@
 
     <header>
         <div id="header-container">
-
+            <div class="image">
+                <img class="mySlides" src="./images/C8DI4DsN0p.jpg" style="width:100%" height="400px">
+                <img class="mySlides" src="./images/zW3k5Dk1NV.jpg" style="width:100%" height="400px">
+                <img class="mySlides" src="./images/XzKIrrNy7p.jpg" style="width:100%" height="400px">
+            </div>
             <div id="navbar">
-                <div id="header-logo">
-                    <img src="./images/jologo.png" alt="" width="150px">
-                </div>
-
                 <div id="left-nav">
-
+                    <img src="./images/Logo01.png2.png" alt="" width="60px">
                     <ul>
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Our Choice</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Meet the team</a></li>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./Recomendations.html">Recomendations</a></li>
+                        <li><a href="./about.html">About Us</a></li>
+                        <li><a href="./contact-us.html">Contact</a></li>
                     </ul>
-                </div>
-
-                <div id="right-nav">
-                    <i class="fab fa-facebook-f"></i>
-                    <i class="fab fa-instagram"></i>
-                    <i class="fab fa-twitter"></i>
-                    <i class="fab fa-tiktok"></i>
                 </div>
             </div>
         </div>
@@ -62,6 +55,7 @@
         </div>
 
         <div id="clear"></div>
+
         <div id="top-rated">
         <div class="container">
             <h2>Our Top Rated Places</h2>
@@ -172,17 +166,25 @@
     <footer>
         <div id="footer-container">
             <div id="footer-logo">
-                <img src="./images/jologo.png" alt="" width="150">
+                <img src="./images/Logo01.png2.png" alt="" width="100">
+                <div id="social-media">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-tiktok"></i>
+                </div>
             </div>
             <div id="box1">
                 <ul>
-                    <li><a href="">alalal</a></li>
-                    <li><a href="">alalal</a></li>
-                    <li><a href="">alalal</a></li>
-                </ul>
+                    <p>Similer Links</p>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Recumended Places</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>                
             </div>
             <div id="box2">
                 <ul>
+                    <p>Recumended Hotels</p>
                     <li><a href="">alalal</a></li>
                     <li><a href="">alalal</a></li>
                     <li><a href="">alalal</a></li>
@@ -190,13 +192,15 @@
             </div>
             <div id="box3">
                 <ul>
-                    <li><a href="">alalal</a></li>
+                    <p>Related Links</p>
+                    <li><a href="">Airbnb</a></li>
                     <li><a href="">alalal</a></li>
                     <li><a href="">alalal</a></li>
                 </ul>
             </div>
             <div id="box4">
                 <ul>
+                    <p>Social Media</p>
                     <li><a href="">alalal</a></li>
                     <li><a href="">alalal</a></li>
                     <li><a href="">alalal</a></li>
@@ -204,8 +208,6 @@
             </div>
         </div>
     </footer>
-
-
     <script src="./js/animations.js"></script>
 </body>
 
