Design-in-process3

--- a/Recomendations.html
+++ b/Recomendations.html
@@ -52,31 +52,31 @@
                     <i class="fab fa-tiktok"></i>
                 </div>
             </div>
-            <div id="box1">
+            <div class="footer-box">
                 <ul>
                     <p>Similer Links</p>
                     <li><a href="">About</a></li>
-                    <li><a href="">Recumended Places</a></li>
+                    <li><a href="">Recumendatios</a></li>
                     <li><a href="">Contact</a></li>
-                </ul>                
+                </ul>
             </div>
-            <div id="box2">
+            <div class="footer-box">
                 <ul>
                     <p>Recumended Hotels</p>
-                    <li><a href="">alalal</a></li>
-                    <li><a href="">alalal</a></li>
-                    <li><a href="">alalal</a></li>
+                    <li><a href="https://www.marriott.com/hotels/travel/ammxr-the-st-regis-amman/?scid=bb1a189a-fec3-4d19-a255-54ba596febe2&y_source=1_MTMwMzkyMTYtNzE1LWxvY2F0aW9uLmdvb2dsZV93ZWJzaXRlX292ZXJyaWRl">The St. Regis Amman</a></li>
+                    <li><a href="https://www.google.com/search?q=w+amman&sxsrf=ALeKk02evXOKVLHidi1b9ImbLuzNednCHg%3A1617530159354&ei=L41pYMGRFYH4sAeLpavACA&hotel_occupancy=&oq=w+amman&gs_lcp=Cgdnd3Mtd2l6EAMyDgguEMcBEK8BEJECEJMCMgIIADICCAAyAggAMgIIADIICC4QxwEQrwEyAggAMgUIABDJAzICCAAyBAgAEEM6BAgjECc6CwguEMcBEK8BEJECOgUIABCRAjoICAAQsQMQgwE6BQgAELEDOgIILlDEIFjbJ2CBK2gAcAJ4AIABigKIAZoOkgEFMC4yLjaYAQCgAQGqAQdnd3Mtd2l6wAEB&sclient=gws-wiz&ved=0ahUKEwiB5b60qeTvAhUBPOwKHYvSCogQ4dUDCA0&uact=5">W Amman</a></li>
+                    <li><a href="https://www.fourseasons.com/amman/?seo=google_local_amm1_emea">FOUR SEASONS</a></li>
                 </ul>
             </div>
-            <div id="box3">
+            <div class="footer-box">
                 <ul>
                     <p>Related Links</p>
-                    <li><a href="">Airbnb</a></li>
-                    <li><a href="">alalal</a></li>
-                    <li><a href="">alalal</a></li>
+                    <li><a href="https://ar.airbnb.com/?_set_bev_on_new_domain=1617269097_NjliZGFhNDcwNWQ0">Airbnb</a></li>
+                    <li><a href="https://www.hometogo.com/">Home to go</a></li>
+                    <li><a href="https://www.flipkey.com/">Flip key</a></li>
                 </ul>
             </div>
-            <div id="box4">
+            <div class="footer-box">
                 <ul>
                     <p>Social Media</p>
                     <li><a href="">alalal</a></li>
@@ -86,6 +86,7 @@
             </div>
         </div>
     </footer>
+        
     
 
     <script src="./js/animations.js"></script>
