--- a/Recomendations.html
+++ b/Recomendations.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/styles.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
-        integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles/recomendations.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <title>Khosh Alena</title>
 </head>
 <body>
@@ -36,6 +36,8 @@
 
 
     <main>
+        <div id="places">
+        </div>
 
     </main>
 
@@ -89,5 +91,7 @@
     
 
     <script src="./js/animations.js"></script>
+    <script src="./js/app.js"></script>
+    <script src="./js/places.js"></script>
 </body>
 </html>
