--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         
         <div class="item tm1">
             <img src="http://www.planetware.com/photos-large/MAR/morocco-casablanca-hassan-ii-mosque-facade.jpg">
-            <p class="ar">Hassan II Mosque</p> -->     
+            <p class="ar">Hassan II Mosque</p>      
         </div>
                 
         <div class="item tm2">
@@ -209,7 +209,6 @@
 
 
     <script src="./js/app.js"></script>
-    <script src="./js/places.js"></script>
 
     <script src="./js/animations.js"></script>
     <script src="./js/comments.js"></script>
