--- a/index.html
+++ b/index.html
@@ -117,36 +117,16 @@
             <input type="radio" name="testimonial" id="t-4">
             <input type="radio" name="testimonial" id="t-5">
             <div class="testimonials">
-                <label id="label1" class="item" for="t-1">
-                    <!-- <img id="image1" src="https://dummyimage.com/150" alt="picture">
-                    <p>"Raw denim you probably haven't heard of them jean short austin. Nesciunt tofu stumptown aliqua,
-                        retro synth master cleanse."</p>
-                    <h2>- Princy, Web Developer</h2> -->
-                </label>
-                <label id="label2" class="item" for="t-2">
-                    <!-- <img id="image2" src="https://dummyimage.com/150" alt="picture">
-                    <p>"Raw denim you probably haven't heard of them jean short austin. Nesciunt tofu stumptown aliqua,
-                        retro synth master cleanse."</p>
-                    <h2>- Princy, Web Developer</h2> -->
-                </label>
-                <label id="label3" class="item" for="t-3">
-                    <!-- <img id="image3" src="https://dummyimage.com/150" alt="picture">
-                    <p>"Raw denim you probably haven't heard of them jean short austin. Nesciunt tofu stumptown aliqua,
-                        retro synth master cleanse."</p>
-                    <h2>- Princy, Web Developer</h2> -->
-                </label>
-                <label id="label4" class="item" for="t-4">
-                    <!-- <img id="image4" src="https://dummyimage.com/150" alt="picture">
-                    <p>"Raw denim you probably haven't heard of them jean short austin. Nesciunt tofu stumptown aliqua,
-                        retro synth master cleanse."</p>
-                    <h2>- Princy, Web Developer</h2> -->
-                </label>
-                <label id="label5" class="item" for="t-5">
-                    <!-- <img id="image5" src="https://dummyimage.com/150" alt="picture">
-                    <p>"Raw denim you probably haven't heard of them jean short austin. Nesciunt tofu stumptown aliqua,
-                        retro synth master cleanse."</p>
-                    <h2>- Princy, Web Developer</h2> -->
-                </label>
+                <label id="label1" class="item" for="t-1"></label>
+
+                <label id="label2" class="item" for="t-2"></label>
+
+                <label id="label3" class="item" for="t-3"></label>
+
+                <label id="label4" class="item" for="t-4"></label>
+
+                <label id="label5" class="item" for="t-5"></label>
+                
             </div>
             <div class="dots">
                 <label for="t-1"></label>
