First-Stand-up-Meeting

--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
                 best in their beloved country.
         </div>
 
-        <div class="container">
+        <div class="card-container">
 
 
 
