--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
         <div class="card-container">
             <div class="card">
               <div class="imageBox">
-                <img src="https://opensource.com/sites/default/files/styles/image-full-size/public/lead-images/github-universe.jpg?itok=lwRZddXA" alt="github">
+                <img src="./images/13615053_999387673462710_1556085207274794064_n.jpg" alt="github">
               </div>
               <div class="datalist">
                 <h2>Sufian Hamdan</h2>
