--- a/Recomendations.html
+++ b/Recomendations.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/styles.css">
-    <!-- <link rel="stylesheet" href="./styles/recomendations.css"> -->
+    <link rel="stylesheet" href="./styles/recomendations.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
-        integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Noto+Serif:ital@1&display=swap" rel="stylesheet">
+    
     <title>Khosh Alena</title>
 </head>
 <body>
@@ -66,6 +69,7 @@
     <main>
         <div id="places">
         </div>
+        <!-- <h1 id="first-header">20 Must-Visit Attractions in Jordan</h1> -->
 
     </main>
 
@@ -128,6 +132,5 @@
     <script src="./js/places.js"></script>
 
     <script src="./js/animations.js"></script>
-    <script src="./js/comments.js"></script>
 </body>
 </html>
