--- a/contactUs.html
+++ b/contactUs.html
@@ -1,102 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 ​
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Caladea&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/reset.css">
-    <!-- <link rel="stylesheet" href="./styles/styles.css"> -->
-    <link rel="stylesheet" href="./styles/contactus.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+        integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles/contactus.css"> -->
+
+    <title>Contact Us</title>
 </head>
 ​
+
 <body>
     <header>
-        <div id="header-container">
-            <div id="navbar">
-                <span id="left-nav">
-                    <img src="./images/Logo01.png2.png" alt="" width="60px">
-                    <ul>
-​
-                        <li><a href="./index.html">Home</a></li>
-                        <li><a href="./Recomendations.html">Recomendations</a></li>
-                        <li><a href="./about.html">About Us</a></li>
-                        <li><a href="./contact-us.html">Contact</a></li>
-                    </ul>
-                </div>
-            </span>
+        <div id="navbar">
+            <div id="left-nav">
+                <img src="./images/logofinal3.png" alt="" width="60px">
+                <ul>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./Recomendations.html">Recomendations</a></li>
+                    <li><a href="./about.html">About Us</a></li>
+                    <li><a href="./contactUs.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
         </div>
     </header>
-    <section class="imgContainer">
-​
-    
-    <section class="contact">
-        <dev class="content">
-            <h2>Contact Us</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae id magni nihil explicabo facilis
-                voluptates provident nobis dolor ut quod animi facere, ex in odit quae pariatur tempora tempore nulla!
-            </p>
-        </dev>
-        <div class="container img" >
-            <div class="contactInfo">
-                <div class="box">
-                    <div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
-                    <div class="text">
-                        <h3>Address</h3>
-                        <p>Jordan Amman</p>
-​
+    <div class="color">
+        <section class="imgContainer">
+            <section class="contact">
+                <dev class="content">
+                    <h2>Contact Us</h2>
+                    <p>Please get in touch and our expert support <br> team will answer all you questions.
+                    </p>
+                </dev>
+                <div class="container">
+                    <div class="contactInfo">
+                        <div class="box">
+                            <div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
+                            <div class="text">
+                                <h3>Address</h3>
+                                <p>Jordan Amman</p>
+
+                            </div>
+                        </div>
+                        <div class="box">
+                            <div class="icon"><i class="fa fa-envelope" aria-hidden="true"></i></div>
+                            <div class="text">
+                                <h3>E-mail</h3>
+                                <p>5aleha-3alena@info.com</p>
+                                ​
+                            </div>
+                        </div>
+                        <div class="box">
+                            <div class="icon"><i class="fa fa-phone" aria-hidden="true"></i></div>
+                            <div class="text">
+                                <h3>Phone</h3>
+                                <p>+962-999-999-9</p>
+                                ​
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contactForm">
+                        <form action="">
+                            <h2>Send message</h2>
+                            <div class="inputBox">
+                                <input type="text" name="" required="required">
+                                <span>Full Name</span>
+                            </div>
+                            <div class="inputBox">
+                                <input type="text" name="" required="required">
+                                <span>Email</span>
+                            </div>
+                            <div class="inputBox">
+                                <input type="text" required="required" id=""></textarea>
+                                <span>Type Your Message..</span>
+                            </div>
+                            <div class="inputBox">
+                                <input type="submit" value="Submit">
+                                ​
+                            </div>
+                        </form>
+                        ​
                     </div>
                 </div>
-                <div class="box">
-                    <div class="icon"><i class="fa fa-envelope" aria-hidden="true"></i></div>
-                    <div class="text">
-                        <h3>email</h3>
-                        <p>khoosh-3lena@info.com</p>
-​
-                    </div>
-                </div>
-                <div class="box">
-                    <div class="icon"><i class="fa fa-phone" aria-hidden="true"></i></div>
-                    <div class="text">
-                        <h3>Phone</h3>
-                        <p>+962-999-999-9</p>
-​
-                    </div>
-                </div>
-            </div>
-            <div class="contactForm">
-                <form action="">
-                    <h2>Send message</h2>
-                    <div class="inputBox">
-                        <input type="text" name="" required="required">
-                        <span>Full Name</span>
-                    </div>
-                    <div class="inputBox">
-                        <input type="text" name="" required="required">
-                        <span>Email</span>
-                    </div>
-                    <div class="inputBox">
-                        <input type="text" required="required" id=""></textarea>
-                        <span>Type Your Message..</span>
-                    </div>
-                    <div class="inputBox">
-                        <input type="submit" value="Submit">
-​
-                    </div>
-                </form>
-​
-            </div>
-        </div>
-​
+    </div>
+    ​
     </section>
-</section>
+    </section>
+    </div>
     <footer>
         <div id="footer-container">
             <div id="footer-logo">
-                <img src="./images/Logo01.png2.png" alt="" width="100">
+                <img src="./images/logofinal3.png" alt="" width="100">
                 <div id="social-media">
                     <i class="fab fa-facebook-f"></i>
                     <i class="fab fa-instagram"></i>
@@ -115,17 +121,17 @@
             <div id="box2">
                 <ul>
                     <p>Recumended Hotels</p>
-                    <li><a href="">alalal</a></li>
-                    <li><a href="">alalal</a></li>
-                    <li><a href="">alalal</a></li>
+                    <li><a href="https://www.marriott.com/hotels/travel/ammxr-the-st-regis-amman/?scid=bb1a189a-fec3-4d19-a255-54ba596febe2&y_source=1_MTMwMzkyMTYtNzE1LWxvY2F0aW9uLmdvb2dsZV93ZWJzaXRlX292ZXJyaWRl">The St. Regis Amman</a></li>
+                    <li><a href="https://www.google.com/search?q=w+amman&sxsrf=ALeKk02evXOKVLHidi1b9ImbLuzNednCHg%3A1617530159354&ei=L41pYMGRFYH4sAeLpavACA&hotel_occupancy=&oq=w+amman&gs_lcp=Cgdnd3Mtd2l6EAMyDgguEMcBEK8BEJECEJMCMgIIADICCAAyAggAMgIIADIICC4QxwEQrwEyAggAMgUIABDJAzICCAAyBAgAEEM6BAgjECc6CwguEMcBEK8BEJECOgUIABCRAjoICAAQsQMQgwE6BQgAELEDOgIILlDEIFjbJ2CBK2gAcAJ4AIABigKIAZoOkgEFMC4yLjaYAQCgAQGqAQdnd3Mtd2l6wAEB&sclient=gws-wiz&ved=0ahUKEwiB5b60qeTvAhUBPOwKHYvSCogQ4dUDCA0&uact=5">W Amman</a></li>
+                    <li><a href="https://www.fourseasons.com/amman/?seo=google_local_amm1_emea">FOUR SEASONS</a></li>
                 </ul>
             </div>
             <div id="box3">
                 <ul>
                     <p>Related Links</p>
-                    <li><a href="">Airbnb</a></li>
-                    <li><a href="">alalal</a></li>
-                    <li><a href="">alalal</a></li>
+                    <li><a href="https://ar.airbnb.com/?_set_bev_on_new_domain=1617269097_NjliZGFhNDcwNWQ0">Airbnb</a></li>
+                    <li><a href="https://www.hometogo.com/">Home to go</a></li>
+                    <li><a href="https://www.flipkey.com/">Flip key</a></li>
                 </ul>
             </div>
             <div id="box4">
@@ -140,4 +146,5 @@
     </footer>
 </body>
 ​
+
 </html>
