--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
 
     <script src="./js/app.js"></script>
-    <script src="./js/places.js"></script>
+    <!-- <script src="./js/places.js"></script> -->
 
     <script src="./js/animations.js"></script>
     <script src="./js/comments.js"></script>
