--- a/people.html
+++ b/people.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/styles.css">
-    <link rel="stylesheet" href="./styles/recomendations.css">
+    <link rel="stylesheet" href="./styles/people.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
         integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -72,12 +72,12 @@
 
     <main>
 
-        <h1 id="first-header">12 Must-Visit Attractions in Jordan</h1>
-        <p id="main-prgh">Welcome to JORDAN most celebrated, easy going country, where smiles, generosity, Levantine
-            flavors, and historical ruins are there to accompany you through your magic ride in an oriental gem.</p>
+         <h1 id="first-header">Experience life in Jordan with the original people</h1>
+        <!-- <p id="main-prgh">Welcome to JORDAN most celebrated, easy going country, where smiles, generosity, Levantine
+            flavors, and historical ruins are there to accompany you through your magic ride in an oriental gem.</p>  -->
 
 
-        <div id="places">
+        <div id="people">
 
         </div>
 
@@ -142,11 +142,7 @@
 
     </footer>
 
-
-
-
-    <script src="./js/app.js"></script>
-    <script src="./js/places.js"></script>
+<script src="./js/people.js"></script>
     <script src="./js/animations.js"></script>
 </body>
 
