--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         
                 <div class="mySlides fade">
                   <img src="./images/zW3k5Dk1NV.jpg" style="width:100%" height="550px">
-                  <div class="text">The Top 10 Friendly<br/> Places In Jordan</div>
+                  <div class="text">Find The Top 10 Friendly<br/> Places In Jordan</div>
                   <button class="btnExplore">Explore</button>
                 </div>
                 
@@ -51,6 +51,7 @@
                 <ul>
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./Recomendations.html">Recomendations</a></li>
+                    <li><a href="./people.html">Homestay</a></li>
                     <li><a href="./about.html">About Us</a></li>
                     <li><a href="./contactUs.html">Contact</a></li>
                 </ul>
@@ -58,6 +59,7 @@
         </div>
     </div>
 </header>
+
 
 
     <div id="clear"></div>
