--- a/people.html
+++ b/people.html
@@ -25,7 +25,7 @@
             
                     <div class="mySlides fade">
                       <img src="./images/zW3k5Dk1NV.jpg" style="width:100%" height="550px">
-                      <div class="text">The Top 10 Friendly<br/> Places In Jordan</div>
+                      <div class="text">Find The Top 10 Friendly<br/> Places In Jordan</div>
                       <button class="btnExplore">Explore</button>
                     </div>
                     
@@ -56,6 +56,7 @@
                     <ul>
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="./Recomendations.html">Recomendations</a></li>
+                        <li><a href="./people.html">Homestay</a></li>
                         <li><a href="./about.html">About Us</a></li>
                         <li><a href="./contactUs.html">Contact</a></li>
                     </ul>
@@ -63,6 +64,7 @@
             </div>
         </div>
     </header>
+
 
 
     <div id="clear"></div>
