home page rated images

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
         <div id="top-rated-container">
             <h3>Our Top Rated Places</h3>
-        <div class="img__wrap">
+          <!-- <div class="img__wrap">
             <img class="img__img" src="/images/kingtalal dom.jpg" width="100%" height="100%"/>
             <p class="img__description"><a id="jordan river" href="#jordan river">King Talal Dom</a></p>
           </div>
@@ -108,7 +108,7 @@
           <div class="img__wrap">
             <img class="img__img" src="./images/Temple Hercules.jpg" width="100%" height="100%"/>
             <p class="img__description"><a href="">Temple Hercules</a></p>
-          </div>
+          </div> -->
         </div>
 
             <div id="clear"></div>
