--- a/Recomendations.html
+++ b/Recomendations.html
@@ -73,6 +73,20 @@
 
 
     <main>
+        <p id="cities">Popular Cities in Jordan</p>
+        <img id="amman" src="./images/locations/amman.jpg" alt="">
+        <img id="aqaba" src="./images/locations/aqaba.jpg" alt="">
+        <img id="jarash" src="./images/locations/jerash-ruins.jpg" alt="">
+        <img id="madaba" src="./images/locations/madaba.jpg" alt="">
+        <h2 id="amman-h">Amman</h2>
+        <p id="amman-p">Amman Governorate, Jordan</p>
+        <h2 id="aqaba-h">Aqaba</h2>
+        <p id="aqaba-p">AL Aqaba Governorate, Jordan</p>
+        <h2 id="jerash-h">Jerash</h2>
+        <p id="jerash-p">Jerash Governorate, Jordan</p>
+        <h2 id="madaba-h">Madaba</h2>
+        <p id="madaba-p">Madaba Governorate, Jordan</p>
+        
 
         <h1 id="first-header">12 Must-Visit Attractions in Jordan</h1>
         <p id="main-prgh">Welcome to JORDAN most celebrated, easy going country, where smiles, generosity, Levantine
