--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div id="clear"></div>
 
         <div id="top-rated-container">
-            <h3>Our Top Rated Places</h3>
+            <h3>Top 5 Rated Places</h3>
 
           <!-- <div class="img__wrap">
             <img class="img__img" src="/images/kingtalal dom.jpg" width="100%" height="100%"/>
