--- a/people.html
+++ b/people.html
@@ -59,11 +59,13 @@
                             <li><a href="./people.html">Homestay</a></li>
                             <li><a href="./about.html">About Us</a></li>
                             <li><a href="./contactUs.html">Contact</a></li>
+                            <a href="signuppage.html"><i class="fas fa-user">Login</i></a>
                         </ul>
                     </div>
                 </div>
             </div>
     </header>
+
 
 
 
@@ -136,14 +138,13 @@
             </div>
             <div class="footer-box">
                 <ul>
-                    <p>Social Media</p>
-                    <li><a href="">alalal</a></li>
-                    <li><a href="">alalal</a></li>
-                    <li><a href="">alalal</a></li>
+                    <p>Top 3 Homestay</p>
+                    <li><a href="">Ahmad</a></li>
+                    <li><a href="">Amal</a></li>
+                    <li><a href="">Ali</a></li>
                 </ul>
             </div>
         </div>
-
     </footer>
 
     <script src="./js/people.js"></script>
