--- a/people.html
+++ b/people.html
@@ -12,43 +12,35 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Noto+Serif:ital@1&display=swap"
         rel="stylesheet">
-
     <title>Khosh Alena</title>
 </head>
-
 <body>
     <header>
         <div id="header-container">
             <div id="display-box">
                 <div class="slideshow-container">
-
                     <div class="mySlides fade">
                         <img src="./images/zW3k5Dk1NV.jpg" style="width:100%" height="550px">
                         <div class="text">Find The Top 10 Friendly<br /> Places In Jordan</div>
                         <button class="btnExplore">Explore</button>
                     </div>
-
                     <div class="mySlides fade">
                         <img src="./images/alarays pool.jpg" style="width:100%" height="550px">
                         <div class="text">Plan Your Trip</div>
                         <button class="btnExplore">Explore</button>
                     </div>
-
                     <div class="mySlides fade">
                         <img src="./images/wp4446840.jpg" style="width:100%" height="550px">
                         <div class="text"> Explore Our Culture</div>
                         <button class="btnExplore">Explore</button>
                     </div>
-
                 </div>
                 <br>
-
                 <div style="text-align:center">
                     <span class="dot"></span>
                     <span class="dot"></span>
                     <span class="dot"></span>
                 </div>
-
                 <div id="navbar">
                     <div id="left-nav">
                         <img src="./images/logofinal3.png" alt="" width="60px">
@@ -63,39 +55,21 @@
                 </div>
             </div>
     </header>
-
-
-
     <div id="clear"></div>
-
-
-
-
     <main>
         <div class="first-header">
-
             <h1 id="first-header">Experience life in Jordan with the original people</h1>
         </div>
-        <!-- <p id="main-prgh">Welcome to JORDAN most celebrated, easy going country, where smiles, generosity, Levantine
-            flavors, and historical ruins are there to accompany you through your magic ride in an oriental gem.</p>  -->
-
-        
         <div class="people" style="position: relative;top: 105px;">
-            <div id="people">
-                
-
+            <div class="table">
+                <div id="people">
+                </div>
+                <div id="people2">
+                </div>
             </div>
         </div>
-
-
     </main>
-
-
-
-
-
     <div id="clear"></div>
-
     <footer>
         <div id="footer-container">
             <div id="footer-logo">
