doing-roaa-notes-design

--- a/Recomendations.html
+++ b/Recomendations.html
@@ -99,7 +99,7 @@
         
         
         <div id="recom">
-            <h1 >12 Must-Visit Attractions in Jordan</h1>
+            <h1 >12 Most-Visit Attractions in Jordan</h1>
         <p >Welcome to JORDAN most celebrated, easy going country, where smiles, generosity, Levantine
             flavors, and historical ruins are there to accompany you through your magic ride in an oriental gem.</p>
         </div>
@@ -169,7 +169,6 @@
             </div>
         </div>
     </footer>
-
 
 
 
