--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
                 <div id="navbar">
                     <div id="left-nav">
                         <img src="./images/logofinal3.png" alt="" width="60px">
-                        <ul>
-                            <li><a href="./index.html">Home</a></li>
-                            <li><a href="./Recomendations.html">Recomendations</a></li>
-                            <li><a href="./people.html">Homestay</a></li>
-                            <li><a href="./about.html">About Us</a></li>
-                            <li><a href="./contactUs.html">Contact</a></li>
-                            <a href="signuppage.html"><i class="fas fa-user">Login</i></a>
+                        <ul id="links">
+                            <li><a class="link" href="./index.html" >Home</a></li>
+                            <li><a class="link" href="./Recomendations.html">Recomendations</a></li>
+                            <li><a class="link" href="./people.html">Homestay</a></li>
+                            <li><a class="link" href="./about.html">About Us</a></li>
+                            <li><a class="link" href="./contactUs.html">Contact</a></li>
+                            <a class="link" href="signuppage.html"><i class="fas fa-user">Login</i></a>
                         </ul>
                     </div>
                 </div>
