--- a/people.html
+++ b/people.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,9 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Noto+Serif:ital@1&display=swap"
         rel="stylesheet">
-    <title>Khosh Alena</title>
+    <title>People</title>
 </head>
-
 <body>
     <header>
         <div id="header-container">
@@ -113,18 +111,15 @@
             </div>
             <div class="footer-box">
                 <ul>
-                    <p>Social Media</p>
-                    <li><a href="">alalal</a></li>
-                    <li><a href="">alalal</a></li>
-                    <li><a href="">alalal</a></li>
+                    <p>Top 3 Homestay</p>
+                    <li><a href="">Ahmad</a></li>
+                    <li><a href="">Amal</a></li>
+                    <li><a href="">Ali</a></li>
                 </ul>
             </div>
         </div>
-
     </footer>
-
     <script src="./js/people.js"></script>
     <script src="./js/animations.js"></script>
 </body>
-
 </html>
