--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div class="mySlides fade">
                         <img src="./images/wp4446840.jpg" style="width:100%" height="550px">
                         <div class="text"> Explore Our Culture</div>
-                        <button class="btnExplore">Explore</button>
+                        <button class="btnExplore" onclick="">Explore</button>
                     </div>
 
                 </div>
@@ -52,7 +52,7 @@
                     <div id="left-nav">
                         <img src="./images/logofinal3.png" alt="" width="60px">
                         <ul id="links">
-                            <li><a class="link" href="./index.html" >Home</a></li>
+                            <li><a class="link1" href="./index.html" >Home</a></li>
                             <li><a class="link" href="./Recomendations.html">Recomendations</a></li>
                             <li><a class="link" href="./people.html">Homestay</a></li>
                             <li><a class="link" href="./about.html">About Us</a></li>
